# short-space

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.travis/: codecov.sh
assets/: plank.blend1  warsztaty.blend1
assets/blend/: plank.blend  warsztaty.blend
assets/fonts/: cherry-11.bdf  cherry-13.bdf
assets/fonts/shaders/: font.frag  font.vert
assets/models/: coil.blend  coil.blend1  cube.mtl  dice.mtl  map.blend  map.blend1  map.mtl  monke.mtl  skatepark.mtl  solid_cube.mtl  test_cube.mtl  test_plane.mtl  testmap.mtl  warsztaty.mtl  xyz_cube.mtl
assets/scenes/: test.ron
assets/settings/: game.ron  physics.ron
assets/shaders/: bake_shadows.glsl.vert  cube.frag  cube.vert  emissive.glsl.frag  emissive_untex.glsl.frag  frag.glsl  frag_untex.glsl  line.glsl.frag  line.glsl.vert  mesh.glsl.vert  model.frag  model.vert  tex.glsl.frag  tex_unlit.glsl.frag  triangle.frag  triangle.vert  untex.glsl.frag  untex_unlit.glsl.frag  vert.glsl
assets/shaders/compiled/: textured_emissive_frag.spv  untextured_emissive_frag.spv  vert.spv
assets/shaders/wgsl/: emissive.wgsl  emissive_untex.wgsl  line.wgsl  mesh.wgsl  tex.wgsl  tex_unlit.wgsl  untex.wgsl  untex_unlit.wgsl
builds/assets/models/: arrow.mtl  huge_map.mtl
builds/assets/shaders/: asteroid.frag  model.vert
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/assets/: data.rs  mod.rs
engine/src/graphics/: camera.rs  mod.rs  pass.rs  setup.rs
engine/src/graphics/debug/: lines.rs  mod.rs  pass.rs
engine/src/graphics/mesh/: material.rs  mod.rs  pass.rs  pipeline.rs  render_mesh.rs
engine/src/graphics/ui/: mod.rs
engine/src/input/: mod.rs  state.rs
engine/src/physics/: velocity.rs
engine/src/spacetime/: position.rs  time.rs
engine/src/state/: mod.rs
engine/src/test/: mod.rs
game/: Cargo.toml  build.rs
game/src/: main.rs  player.rs  settings.rs
game/src/state/: game.rs  loading.rs  main.rs  mod.rs
game/src/ui/: console.rs  debug.rs  mod.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/render_gl_derive/: Cargo.toml
lib/render_gl_derive/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: debug.rs  entity.rs  game_state.rs  gamestate.rs  input.rs  main.rs  model.rs  notes.rs  player.rs  scene.rs  settings.rs  state.rs  time.rs  triangle.rs  weapon.rs
src/asset_loader/: data.rs  error.rs  mod.rs  obj.rs
src/assets/: data.rs  mod.rs
src/camera/: camera.rs  fps_camera.rs  mod.rs  quaternion_camera.rs  spectator_camera.rs
src/graphics/: bitmap_font.rs  buffer.rs  camera.rs  color.rs  color_buffer.rs  data.rs  light.rs  mod.rs  model.rs  pass.rs  setup.rs  shader.frag  shader.rs  shader.vert  texture.rs  viewport.rs
src/graphics/camera/: _euler_camera.rs  fps_camera.rs  mod.rs  spectator_camera.rs
src/graphics/debug_pass/: lines.rs  mod.rs  pass.rs
src/graphics/mesh/: mesh.rs  mesh_pass.rs  mesh_pipeline.rs  mod.rs  model.rs
src/graphics/mesh_pass/: material.rs  mod.rs  pass.rs  pipeline.rs  render_mesh.rs
src/graphics/mesh_pass/shadow_pass/: light.rs  mod.rs
src/graphics/ui_pass/: mod.rs
src/input/: keyboard_input.rs  mod.rs  mouse_input.rs  state.rs
src/networking/: client_packet.fbs  client_packet_generated.rs  message.rs  mod.rs  serializer.rs
src/physics/: _mod_old.rs  mod.rs  velocity.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  mod.rs  model.rs  shader.rs  texture.rs
src/resources/: error.rs  mod.rs  obj.rs
src/spacetime/: mod.rs  position.rs  time.rs
src/state/: game.rs  loading.rs  main.rs  mod.rs
src/states/: game.rs  loading.rs  main.rs  mod.rs
src/tests/: mod.rs
src/ui/: mod.rs
src/wgpu_graphics/: camera.rs  mesh.rs  mod.rs  pass.rs  render.rs  setup.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/world/: _atlas.rs  _atlas_pmove.rs  atlas.rs  atlas_pmove.rs  entity.rs  mod.rs  scene.rs
