[package]
name = "game"
version = "0.1.0"
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
anyhow = "1.0.37"

# Graphics
wgpu = "0.6.2"
winit = { version = "0.24.0", default_features = false, features = ["x11"] }
futures = "0.3.8"

# Math
nalgebra = "0.23.2"

# Physics
ncollide3d = "0.26.1"

# Texture loading
image = "0.23.12"

# Other
env_logger = "0.8.2"
log = "0.4.11"

# Data loading
bytemuck = { version = "1.4.1", features = ["derive"] }

# Misc
serde = "1.0.118"
const_format = "0.2.11"
ron = "0.6.4"

[dependencies.legion]
version = "0.3.1"
#features = ["extended-tuple-impls"]

[dependencies.wavefront_obj]
git = "https://github.com/Skelebot/wavefront_obj"

[build-dependencies]
# Used for copying the assets dir to the target dir for testing
walkdir = "2.3.1"

[dev-dependencies]
# For relative-comparing floats in tests
approx = "0.4.0"

# `image` is terribly slow in debug mode, so override it to release
[profile.dev.package.image] 
opt-level = 2
