[package]
name = "game"
version = "0.1.0"
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
# Graphics
wgpu = "0.6.2"
winit = { version = "0.24.0", default_features = false, features = ["x11"] }

# Math
nalgebra = "0.24.0"

# Physics
ncollide3d = "0.27.0"

# File loading
serde = "1.0.118"
ron = "0.6.4"
image = "0.23.12"

# Data loading
bytemuck = { version = "1.4.1", features = ["derive"] }

# Misc
const_format = "0.2.12"
futures = "0.3.9"
env_logger = "0.8.2"
log = "0.4.13"

# Error handling
color-eyre = "0.5.10"

[dependencies.legion]
version = "0.3.1"
#features = ["extended-tuple-impls"]

[dependencies.wavefront_obj]
git = "https://github.com/Skelebot/wavefront_obj"

[build-dependencies]
# Used for copying the assets dir to the target dir for testing
walkdir = "2.3.1"

[dev-dependencies]
# For relative-comparing floats in tests
approx = "0.4.0"

[profile.dev.package.image] 
opt-level = 3

[profile.dev.package.backtrace] 
opt-level = 3