[package]
name = "game"
version = "0.1.0"
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
# Graphics
wgpu = "0.7"
winit = { version = "0.24", default_features = false, features = ["x11"] }
imgui = "0.7"

# Math
nalgebra = "0.24"

# Physics
ncollide3d = "0.27"

# File loading
serde = "1.0"
ron = "0.6.4"
image = "0.23"

# Data loading
bytemuck = { version = "1.5", features = ["derive"] }

# Misc
const_format = "0.2"
futures = "0.3"
env_logger = "0.8"
log = "0.4"

# Error handling
color-eyre = "0.5"
imgui-winit-support = "0.7"
imgui-wgpu = "0.14"

[dependencies.legion]
version = "0.3"
#features = ["extended-tuple-impls"]

[dependencies.wavefront_obj]
git = "https://github.com/Skelebot/wavefront_obj"

[build-dependencies]
# Used for copying the assets dir to the target dir for testing
walkdir = "2.3"

[dev-dependencies]
# For relative-comparing floats in tests
approx = "0.4"
