[package]
name = "engine"
version = "0.1.0"
edition = "2021"
authors = ["antoni simka <antonisimka.8@gmail.com>"]

[dependencies]
# graphics
winit = { version = "0.25.0", default_features = false, features = ["x11"] }
egui = "0.14.2"

# math
nalgebra = "0.29.0"

# physics
ncollide3d = "0.32.0"

# file loading
serde = "1.0.130"
ron = "0.6.5"
image = "0.23.14"

# data loading
bytemuck = { version = "1.7.2", features = ["derive"] }

# misc
const_format = "0.2.21"
futures = "0.3.17"
env_logger = "0.9.0"
log = "0.4.14"

# error handling
color-eyre = "0.5.11"
legion = "0.4.0"
wavefront_obj = "10.0.0"
egui-winit = "0.0.1-alpha.2"
epaint = "0.14.0"
egui_wgpu_backend = "0.13.0"

[dependencies.wgpu]
version = "0.11.0"
features = ["spirv"]

[build-dependencies]
# used for copying the assets dir to the target dir for testing
walkdir = "2.3.2"

[dev-dependencies]
# for relative-comparing floats in tests
approx = "0.5.0"
