[package]
name = "engine"
version = "0.1.0"
edition = "2021"
authors = ["antoni simka <antonisimka.8@gmail.com>"]

[dependencies]
# graphics
winit = { version = "0.26.1", default_features = false, features = ["x11"] }
egui = "0.16.1"

# math
nalgebra = "0.30.1"

# physics
ncollide3d = "0.32.0"

# file loading
serde = "1.0.136"
ron = "0.7.0"
image = "0.23.14"

# data loading
bytemuck = { version = "1.7.3", features = ["derive"] }

# misc
const_format = "0.2.22"
futures = "0.3.19"
env_logger = "0.9.0"
log = "0.4.14"

# error handling
color-eyre = "0.6.0"
legion = "0.4.0"
wavefront_obj = "10.0.0"
egui-winit = "0.16.0"
egui_wgpu_backend = "0.16.0"

[dependencies.wgpu]
version = "0.12.0"
features = ["spirv"]

[build-dependencies]
# used for copying the assets dir to the target dir for testing
walkdir = "2.3.2"

[dev-dependencies]
# for relative-comparing floats in tests
approx = "0.5.1"
