[package]
name = "game"
version = "0.1.0"
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
# Graphics
winit = "0.26.1"

# Math
nalgebra = "0.30.1"

# Physics
ncollide3d = "0.32.0"

# File loading
serde = "1.0.136"
ron = "0.7.0"
image = "0.23.14"

# Data loading
bytemuck = { version = "1.7.3", features = ["derive"] }

# Misc
const_format = "0.2.22"
futures = "0.3.19"
env_logger = "0.9.0"
log = "0.4.14"

# Error handling
color-eyre = "0.6.0"
legion = "0.4.0"
wavefront_obj = "10.0.0"

egui_winit_platform = "0.13.0"
#epaint = "0.15.0"
egui_wgpu_backend = "0.16.0"
egui = "0.16.1"

[dependencies.wgpu]
version = "0.12.0"
features = ["spirv"]

[build-dependencies]
# Used for copying the assets dir to the target dir for testing
walkdir = "2.3.2"
env_logger = "0.9.0"
log = "0.4.14"

[dev-dependencies]
# For relative-comparing floats in tests
approx = "0.5.1"
